# Pixelle-Video

./: Dockerfile  pyproject.toml
skill/: SKILL.md  install.md  pixelle.py
skill/references/: bgm.md  modes.md  params.md  templates.md  workflows.md
