[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixelle-video"
version = "0.1.0"
description = "Pixelle-Video: A fork of AIDC-AI/Ovis with enhanced video understanding capabilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Pixelle-Video Contributors" },
]
keywords = ["video", "multimodal", "llm", "vision", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "einops>=0.7.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "decord>=0.6.0",
    "av>=11.0.0",
    "tokenizers>=0.19.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.22.0",
    "tqdm>=4.65.0",
    "regex>=2023.0.0",
]

[project.optional-dependencies]
train = [
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
    "datasets>=2.18.0",
]
serve = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "gradio>=4.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
pixelle-video = "pixelle_video.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/Pixelle-Video"
Repository = "https://github.com/your-org/Pixelle-Video"
Issues = "https://github.com/your-org/Pixelle-Video/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pixelle_video*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
